--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome to My Blog</title>
+         <!-- Set render engine for 360 browser -->
+        <meta name="renderer" content="webkit">
+
+        <!-- No Baidu Siteapp-->
+        <meta http-equiv="Cache-Control" content="no-siteapp"/>
+
+        <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">
+        <script src="http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js"></script>
         {% block head %}{% endblock %}
     </head>
     <body>
-        Blog:
-        <a href="{{ url_for('main.index') }}">Home</a>
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li style="color: red">{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+
         {% block content %}{% endblock %}
+        <br>
+        <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
+        <footer data-am-widget="footer" class="am-footer am-footer-one am-no-layout" data-am-footer="{  }">
+            <div class="am-footer-miscs"><p>Power by <a href="http://flask.pocoo.org/" title="Flask" target="_blank" class="">Flask</a>
+                </p>
+                <p>CopyRight©2018 China Inc.</p>
+                <p>京ICP备10086</p></div>
+        </footer>
+        <!--[if (gte IE 9)|!(IE)]><!-->
+        <script src="https://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
+        <!--<![endif]-->
+        <!--[if lte IE 8 ]>
+        <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+        <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
+        <script src=http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.ie8polyfill.min.js></script>
+        <![endif]-->
+        <script src=http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js></script>
     </body>
 </html>
