--- a/app/templates/main/_article_list.html
+++ b/app/templates/main/_article_list.html
@@ -1,28 +1,20 @@
 {#<ul class="articles">#}
 {% for article in articles %}
-        <article class="entry">
+    <article class="blog-main">
+        <h2 class="am-article-title blog-title">
+            {{ article.title }}
+        </h2>
+        <div class="am-g am-g-fixed">
+            <p>
+                {{ article.summary | safe }}
+            {% if article.has_more %}<p><a href="{{ article.link }}" rel="nofollow">阅读更多...</a>{% endif %}
+            </p>
+        </div>
 
-            <header class="entry-header">
-
-                <h2 class="entry-title">
-                     <a href="{{ article.link }}" title="">{{ article.title }}</a>
-                </h2>
-
-            </header>
-
-            <div class="entry-content">
-                <p>
-                    {{ article.summary | safe }}
-                {% if article.has_more %}<p><a href="{{ article.link }}" rel="nofollow">阅读更多...</a>{% endif %}
-                </p>
-            </div>
-
-            <div class="post-more-link text-center">
-                <a href="{{ article.link }}" title="">
-                  阅读全文 »
-                </a>
-              </div>
-
-        </article> <!-- end entry -->
+        <a class="am-btn am-btn-primary" href="{{ article.link }}" target="_blank">
+          阅读全文 »
+        </a>
+    </article> <!-- end entry -->
+    <hr class="am-article-divider">
     {% endfor %}
 {#</ul>#}
