--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,4 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
-{% include 'main/_article_list.html' %}
+<header class="am-topbar">
+    <h1 class="am-topbar-brand">
+        <a href="#">blog</a>
+    </h1>
+
+    <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only"
+            data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span
+            class="am-icon-bars"></span></button>
+
+    <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
+        <ul class="am-nav am-nav-pills am-topbar-nav">
+            <li class="am-active"><a href="{{ url_for('main.index') }}">文章</a></li>
+            <li><a href="#">归档</a></li>
+            <li class="am-dropdown" data-am-dropdown>
+                <a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;">
+                    分类 <span class="am-icon-caret-down"></span>
+                </a>
+                <ul class="am-dropdown-content">
+                    <!--<li class="am-dropdown-header">标题</li>-->
+                    {% for category in categories %}
+                    <li><a href="#">{{ category.name }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+        </ul>
+
+        <form class="am-topbar-form am-topbar-left am-form-inline am-topbar-right" role="search">
+            <div class="am-form-group">
+                <input type="text" class="am-form-field am-input-sm" placeholder="搜索文章">
+            </div>
+            <button type="submit" class="am-btn am-btn-default am-btn-sm">搜索</button>
+        </form>
+
+    </div>
+</header>
+<div class="am-container">
+    {% include 'main/_article_list.html' %}
+</div>
 {% endblock %}
