修复了时间显示不对问题

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
                 <p>CopyRight©2018 China Inc.</p>
                 <p>京ICP备10086</p></div>
         </footer>
+        {% block scripts %}{% endblock %}
         <!--[if (gte IE 9)|!(IE)]><!-->
         <script src="https://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
         <!--<![endif]-->
