--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,8 +13,8 @@
         <!-- No Baidu Siteapp-->
         <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-        <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">
-        <script src="http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
+        <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
         {% block head %}{% endblock %}
     </head>
     <body>
@@ -23,20 +23,21 @@
         <br>
         <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
         <footer data-am-widget="footer" class="am-footer am-footer-one am-no-layout" data-am-footer="{  }">
-            <div class="am-footer-miscs"><p>Power by <a href="http://flask.pocoo.org/" title="Flask" target="_blank" class="">Flask</a>
+            <div class="am-footer-miscs">
+                <p>Power by <a href="http://flask.pocoo.org/" title="Flask" target="_blank" class="">Flask</a>
                 </p>
-                <p>CopyRight©2018 China Inc.</p>
-                <p>京ICP备10086</p></div>
+                <a href="http://www.miitbeian.gov.cn/" target="_blank" title="渝ICP备16005335号-1">渝ICP备16005335号-1</a>
+                </div>
         </footer>
         {% block scripts %}{% endblock %}
         <!--[if (gte IE 9)|!(IE)]><!-->
         <script src="https://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
         <!--<![endif]-->
         <!--[if lte IE 8 ]>
-        <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
-        <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-        <script src=http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.ie8polyfill.min.js></script>
+        <script src="https://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
+        <script src=https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.ie8polyfill.min.js></script>
         <![endif]-->
-        <script src=http://cdn.amazeui.org/amazeui/2.7.2/js/amazeui.min.js></script>
+        <script src=https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js></script>
     </body>
 </html>
