--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
         <!-- No Baidu Siteapp-->
         <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
         <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
         {% block head %}{% endblock %}
