--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -37,5 +37,27 @@
 </header>
 <div class="am-container">
     {% include 'main/_article_list.html' %}
+    <ul class="am-pagination am-pagination-centered">
+        <li><a {% if not pagination.has_prev %} class="am-disabled" {% else %} class="am-active" {% endif %} href="{% if pagination.has_prev %}{{ url_for(endpoint,page =pagination.prev_num) }}{{ fragment }}{% else %}#{% endif %}">&laquo;</a></li>
+
+        {% for p in pagination.iter_pages() %}
+            {% if p %}
+                {% if p == pagination.page %}
+                    <li><a href="{{ url_for(endpoint,page =p) }}{{ fragment }}">{{ p }}</a></li>
+                {% else %}
+                    <li><a href="{{ url_for(endpoint, page = p) }}{{ fragment }}">{{ p }}</a></li>
+                {% endif %}
+            {% else %}
+                <li><a href="#">&hellip;</a>></li>
+            {% endif %}
+        {% endfor %}
+
+        <li><a {% if not pagination.has_next %} class="am-disabled"
+                                            {% else %}class="am-active" {% endif %}href="
+                {% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num) }}{{ fragment }}{% else %}#{% endif %}">
+            &raquo;
+        </a></li>
+    </ul>
 </div>
+
 {% endblock %}
