add log analysis

--- a/app/templates/admin/model/editor.html
+++ b/app/templates/admin/model/editor.html
@@ -12,6 +12,7 @@
             height: 640,
             syncScrolling: "single",
             path: "/static/admin/editormd/lib/",
+            tex: true, // 默认不解析
             imageUpload: true,
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
             imageUploadURL: "/admin/article/editor_pic"
