--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <header class="am-topbar">
     <h1 class="am-topbar-brand">
-        <a href="#">blog</a>
+        <a href="#">Blog</a>
     </h1>
 
     <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only"
