--- a/app/static/css/amaze_custom.css
+++ b/app/static/css/amaze_custom.css
@@ -1,3 +1,14 @@
 .am-post-meta{
     color: #999;
 }
+body {
+    background-color: #F4F4F4;
+}
+.blog-main{
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #E7E7E7;
+    margin: 10px 10px 20px;
+    padding: 30px 20px;
+}
+
