--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,8 +15,12 @@
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/amaze_custom.css') }}">
         <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
-
+        {{moment.include_jquery()}}
+        {{moment.include_moment()}}
+        <!--使用中文-->
+        {{moment.lang('zh-CN')}}
         {% block head %}{% endblock %}
     </head>
     <body>
