--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/amaze_custom.css') }}">
         <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/default.css') }}">
         {{moment.include_jquery()}}
         {{moment.include_moment()}}
         <!--使用中文-->
