--- a/app/templates/main/archives.html
+++ b/app/templates/main/archives.html
@@ -6,57 +6,46 @@
 {% endblock %}
 
 {% block content %}
-<header class="am-topbar">
-    <h1 class="am-topbar-brand">
-        <a href="#">Blog</a>
-    </h1>
-
-    <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only"
-            data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span
-            class="am-icon-bars"></span></button>
-
-    <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
-        <ul class="am-nav am-nav-pills am-topbar-nav">
-            <li><a href="{{ url_for('main.index') }}">文章</a></li>
-            <li class="am-active"><a href="{{ url_for('main.archives') }}">归档</a></li>
-            <li class="am-dropdown" data-am-dropdown>
-                <a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;">
-                    分类 <span class="am-icon-caret-down"></span>
-                </a>
-                <ul class="am-dropdown-content">
-                    <!--<li class="am-dropdown-header">标题</li>-->
-                    {% for category in categories %}
-                    <li><a href="{{ category.link }}">{{ category.name }}</a></li>
-                    {% endfor %}
-                </ul>
-            </li>
-        </ul>
-
-        <form class="am-topbar-form am-topbar-left am-form-inline am-topbar-right" role="search">
-            <div class="am-form-group">
-                <input type="text" class="am-form-field am-input-sm" placeholder="搜索文章">
-            </div>
-            <button type="submit" class="am-btn am-btn-default am-btn-sm">搜索</button>
-        </form>
-
-    </div>
-</header>
 <div class="am-container">
-    <h3>目前共计{{ count }} 篇日志。 继续努力。</h3>
-    <div class="am-panel am-panel-default">
-        <div class="am-panel-hd">
-        {% for y in year %}
-            <h3 class="am-panel-title">{{ y }}</h3>
+    <header class="am-topbar">
+        <h1 class="am-topbar-brand">
+            <a href="{{ url_for('main.index') }}">Cabbage</a>
+        </h1>
+        <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
+            <ul class="am-nav am-nav-pills am-topbar-nav">
+                <li><a href="{{ url_for('main.index') }}">文章</a></li>
+                <li class="am-active"><a href="{{ url_for('main.archives') }}">归档</a></li>
+                <li class="am-dropdown" data-am-dropdown>
+                    <a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;">
+                        分类 <span class="am-icon-caret-down"></span>
+                    </a>
+                    <ul class="am-dropdown-content">
+                        <!--<li class="am-dropdown-header">标题</li>-->
+                        {% for category in categories %}
+                        <li><a href="{{ category.link }}">{{ category.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            </ul>
         </div>
-        <ul class="am-list am-list-static">
-            {% for i in data[y] %}
-                <li><small class="am-post-meta">{{ i.month_and_day }}</small><a class="post-title-link" href="{{ url_for('main.article', id=i.id) }}" itemprop="url">
-                     <span itemprop="name">{{ i.title }}</span>
-                </a></li>
+    </header>
+    <article>
+    <h3>目前共计{{ count }} 篇日志。 继续努力。</h3>
+        <div class="am-panel am-panel-default">
+            <div class="am-panel-hd">
+            {% for y in year %}
+                <h3 class="am-panel-title">{{ y }}</h3>
+            </div>
+            <ul class="am-list am-list-static">
+                {% for i in data[y] %}
+                    <li><small class="am-post-meta">{{ i.month_and_day }}</small><span class="post-title-link" itemprop="name"><a href="{{ url_for('main.article', id=i.id) }}" itemprop="url">
+                        {{ i.title }}</a></span>
+                    </a></li>
+                {% endfor %}
+            </ul>
             {% endfor %}
-        </ul>
-        {% endfor %}
-    </div>
-    {{ macros.pagination_widget(pagination, endpoint) }}
+        </div>
+        {{ macros.pagination_widget(pagination, endpoint) }}
+    </article>
 </div>
 {% endblock %}
