--- a/app/templates/main/_article_list.html
+++ b/app/templates/main/_article_list.html
@@ -2,13 +2,13 @@
 {% for article in articles %}
     <article class="blog-main">
         <h2 class="am-article-title blog-title">
-            {{ article.title }}
+            <a href="{{ article.link }}">{{ article.title }}</a>
         </h2>
         <div class="am-post-meta">{{ moment(article.created).format('YYYY-MM-DD') }}&nbsp;&nbsp;{{ article.category_name }}</div>
         {% if article.tags %}
         <div class="am-post-meta">
             {% for tag in article.tags %}
-                <a href="{{ url_for('main.tag',name =tag.name ) }}" title="" rel="tag">{{ tag.name }}</a>&nbsp;/
+                <a href="{{ url_for('main.tag',name =tag.name ) }}" title="" rel="tag">{{ tag.name }}</a>&nbsp;·
             {% endfor %}
         </div>
         {% endif %}
@@ -24,7 +24,7 @@
             </p>
         </div>
 
-        <a class="am-btn am-btn-primary" href="{{ article.link }}" target="_blank">
+        <a class="am-more" href="{{ article.link }}" target="_blank">
           阅读全文 »
         </a>
     </article> <!-- end entry -->
